 - Qt: Ensure CLI backend is attached when submitting commands (fixes mgba.io/i/662)
 - Qt: Disable "New multiplayer window" when MAX_GBAS is reached (fixes mgba.io/i/107)
 - Qt: Fix game unpausing after frame advancing and refocusing
 - SDL: Fix game crash check
 - SDL: Fix race condition with audio thread when starting
 - SDL: Fix showing version number
 - Test: Fix crash when loading invalid file
 - Test: Fix crash when fuzzing fails to load a file
 - Test: Don't rely on core for frames elapsed
 - Test: Fix crash when loading invalid file
 - Test: Fix crash when fuzzing fails to load a file
 - Tools: Fix recurring multiple times over the same library
 - Util: Fix overflow when loading invalid UPS patches
 - Util: Fix highest-fd socket not being returned by SocketAccept
 - Windows: Fix VDir.rewind
Misc:
 - All: Add C++ header guards
 - All: Move time.h include to common.h
 - 3DS, PSP2, Wii: Last directory loaded is saved
 - CMake: Add ability to just print version string
 - Core: New, faster event timing subsystem
 - Core: Clean up some thread state checks
 - Core: Add generic checksum function
 - Core: Cores can now have multiple sets of callbacks
 - Core: Restore sleep callback
 - Core: Move rewind diffing to its own thread
 - Core: Ability to enumerate and modify video and audio channels
 - Core: List memory segments in the core
 - Core: Move savestate creation time to extdata
 - Core: Config values can now be hexadecimal
 - Core: Improved threading interrupted detection
 - Debugger: Modularize CLI debugger
 - Debugger: Make building with debugging aspects optional
 - Debugger: Add functions for read- or write-only watchpoints
 - Debugger: Make attaching a backend idempotent
 - Debugger: Add mDebuggerRunFrame convenience function
 - Feature: Move game database from flatfile to SQLite3
 - Feature: Support ImageMagick 7
 - Feature: Make -l option explicit
 - FFmpeg: Return false if a file fails to open
 - FFmpeg: Force MP4 files to YUV420P